i18n/zh-Hans/docusaurus-plugin-content-docs/version-1.2/dankmaterialshell/nixos-flake.mdx
---
title: NixOS安装（Flake）
description: 使用 flake 在 NixOS 上安装和配置 DankMaterialShell
sidebar_position: 4
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`██████╗ ███╗   ███╗███████╗
██╔══██╗████╗ ████║██╔════╝
██║  ██║██╔████╔██║███████╗
██║  ██║██║╚██╔╝██║╚════██║
██████╔╝██║ ╚═╝ ██║███████║
╚═════╝ ╚═╝     ╚═╝╚══════╝`}
  hideTitle={true}
/>

DankMaterialShell 可以使用 NixOS 模块在系统范围内安装，也可以使用 home-manager 按用户安装。本指南涵盖了两种基于薄片的安装方法。

:::info[本机 nixpkgs 可用]
DankMaterialShell 现已在 nixpkgs unstable 中可用！如果您使用 NixOS unstable (26.05)，请参阅 [安装 - NixOS](nixos) 了解不需要薄片的本机 nixpkgs 安装方式。
:::

## 安装方法 {#installation-methods}

根据您的需要选择以下安装方法之一：

- **NixOS 模块**：系统范围内的安装，非常适合多用户系统或当您希望 DMS 可供所有用户使用时
- **家庭管理器模块**：每用户安装，非常适合单用户设置或当您需要特定于用户的配置时

## 安装 {#installation}

### 1. 添加 Flake 输入 {#1-add-flake-inputs}

首先，将所需的薄片输入添加到 `flake.nix`：

```nix
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";

    dms = {
      url = "github:AvengeMedia/DankMaterialShell/stable";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };
}
```

:::tip[使用不稳定版本]
如果你想使用 master 分支的不稳定 (-git) 版本，你可以使用：
```nix
dms.url = "github:AvengeMedia/DankMaterialShell";
```
但是，请注意，此处的文档可能不会针对最新更改进行更新。建议您直接检查存储库中的 Nix 模块源代码，并记住它可能无法正常工作。
:::

### 2. 导入 NixOS 或 home-manager 模块 {#2-import-the-nixos-or-home-manager-module}

将相关的 DankMaterialShell 模块添加到您的配置导入中：

如果您使用 NixOS 模块：

```nix
imports = [
  inputs.dms.nixosModules.dank-material-shell
];
```

或者，如果您使用家庭管理器模块：
```nix
imports = [
  inputs.dms.homeModules.dank-material-shell
];
```

### 3.启用 DankMaterialShell {#3-enable-dankmaterialshell}

在您的配置中，启用 DankMaterialShell：

```nix
programs.dank-material-shell.enable = true;
```

就是这样！重建您的系统（或独立的家庭管理器配置），DankMaterialShell 将使用合理的默认值进行安装。

:::warning[NixOS Stable 上的 dgop]
`dgop` 在 nixpkgs stable (25.11) 中不可用。如果您使用 NixOS stable，您需要：
- 从 dgop flake 导入 dgop 并手动设置包，或
- 为 dgop 使用 nixpkgs unstable

要从 flake 导入 dgop，请首先将其添加到 flake 输入中：

```nix
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-25.11";xd

    dms = {
      url = "github:AvengeMedia/DankMaterialShell/stable";
      inputs.nixpkgs.follows = "nixpkgs";
    };

    dgop = {
      url = "github:AvengeMedia/dgop";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };
}
```

然后配置 DankMaterialShell 以使用 flake 中的 dgop 包：

```nix
programs.dank-material-shell = {
  enable = true;
  enableSystemMonitoring = true;
  dgop.package = inputs.dgop.packages.${pkgs.system}.default;
};
```
:::

## 尼日整合 {#niri-integration}

如果您使用 niri 合成器，则 home-manager 模块会提供其他集成选项，包括自动键绑定和启动配置。

:::warning
请注意，niri-flake 中的 `niri-stable` 软件包的版本为 `25.08`，而 DankMaterialShell 所需的版本是最新的 `25.11`（在 nixpkgs 中提供）。
:::

### 先决条件 {#prerequisites}

如果您选择使用 [niri-flake](https://github.com/sodiboo/niri-flake)，请确保您的输入中有它：

```nix
niri = {
  url = "github:sodiboo/niri-flake";
  inputs.nixpkgs.follows = "nixpkgs";
};
```

将其导入您的家庭管理器配置中：

```nix
imports = [
  inputs.niri.homeModules.niri
];
```

:::tip
如果您使用 niri-flake 的 NixOS 模块 (`inputs.niri.nixosModules.niri`)，则无需单独导入 home-manager 模块，因为它已经包含在内。
:::

### 启用 niri 模块 {#enable-niri-module}

您可以导入并使用特定于 niri 的 DankMaterialShell 模块：

```nix
imports = [
  inputs.dms.homeModules.dank-material-shell
  inputs.dms.homeModules.niri
];
```

启用 niri 集成功能：

```nix
programs.dank-material-shell = {
  enable = true;
  niri = {
    enableKeybinds = true;   # Sets static preset keybinds
    enableSpawn = true;      # Auto-start DMS with niri, if enabled
  };
};
```

这将自动配置启动器、通知、设置和所有其他 DankMaterialShell 功能的预设键绑定。

:::note
您不应同时使用 `systemd.enable` 和 `niri.enableSpawn`，因为这将导致同时生成 DankMaterialShell 的两个实例。
:::


### 配置包括 {#config-includes}

DankMaterialShell 的 niri home-manager 模块对配置进行了“破解”，包括 `programs.dank-material-shell.niri.includes` 选项集下的支持。

:::note
不建议同时使用`niri.includes`（默认启用）和`niri.enableKeybinds`，因为后者灵活性较差，可能会引入冲突。

另请注意，这将覆盖您的 `~/.config/niri/config.kdl`，因此您的 niri-flake 生成的文件将位于 `~/.config/niri/hm.kdl` 中（或您在 `originalFileName` 中定义的任何其他文件）。
:::

在大多数情况下，它应该开箱即用，但可以使用配置选项。

#### 默认值 {#defaults}

```nix
programs.dank-material-shell = {
  enable = true;

  niri.includes = {
    enable = true;             # Enable config includes hack. Enabled by default.

    override = true;           # If disabled, DMS settings won't be prioritized over settings defined using niri-flake
    originalFileName = "hm";   # A new name (without extension) for the config file generated by niri-flake.
    filesToInclude = [         # Files under `$XDG_CONFIG_HOME/niri/dms` to be included into the new config
      "alttab"                 # Please note that niri will throw an error if any of these files are missing.
      "binds"
      "colors"
      "layout"
      "outputs"
      "wpblur"
    ];
  };
}
```

### Polkit 特工 {#polkit-agent}

如果您想使用 DankMaterialShell 的内置 polkit 代理并使用 niri-flake 的 NixOS 模块，则需要禁用 niri-flake 的默认 polkit 代理以避免冲突：

```nix
systemd.user.services.niri-flake-polkit.enable = false;
```

## 配置选项 {#configuration-options}

:::info
下面的配置选项适用于**NixOS 模块和家庭管理器模块**。但请注意：
- **NixOS 模块**：在系统范围内安装软件包并将 Quickshell 配置放在 `/etc/xdg/quickshell/dms` 中
- **家庭管理器模块**：另外支持插件、默认设置和默认会话配置
:::

DankMaterialShell 提供了大量配置选项来自定义您的安装。以下是主要选项：

### 功能切换 {#feature-toggles}

```nix
programs.dank-material-shell = {
  enable = true;

  systemd = {
    enable = true;             # Systemd service for auto-start
    restartIfChanged = true;   # Auto-restart dms.service when dank-material-shell changes
  };

  # Core features
  enableSystemMonitoring = true;     # System monitoring widgets (dgop)
  enableVPN = true;                  # VPN management widget
  enableDynamicTheming = true;       # Wallpaper-based theming (matugen)
  enableAudioWavelength = true;      # Audio visualizer (cava)
  enableCalendarEvents = true;       # Calendar integration (khal)
  enableClipboardPaste = true;       # Pasting items from the clipboard (wtype)
};
```

### 自定义 Quickshell 包 {#custom-quickshell-package}

:::info[从源代码构建 Quickshell]

DankMaterialShell flake 已经默认使用从源代码构建的 Quickshell，因为许多功能依赖于未发布的 Quickshell 功能。无需额外配置。

:::

如果您需要覆盖 Quickshell 包：

```nix
programs.dank-material-shell = {
  enable = true;
  quickshell.package = pkgs.quickshell; # or your custom package
};
```

### 设置（仅限家庭管理员） {#settings-home-manager-only}

您可以使用 home-manager 模块配置设置：

```nix
programs.dank-material-shell = {
  enable = true;

  settings = {
    theme = "dark";
    dynamicTheming = true;
    # Add any other settings here
  };

  session = {
    isLightMode = false;
    # Add any other session state settings here
  };

  clipboardSettings = {
    maxHistory = 25;
    maxEntrySize = 5242880;
    autoClearDays = 1;
    clearAtStartup = true;
    disabled = false;
    disableHistory = false;
    disablePersist = true;
  };
};
```

如果您在使用家庭管理器管理设置时更改 GUI 中的设置，您将看到一个弹出窗口，指出设置是只读的，并提供复制新设置的选项。然后，您可以在复制的设置上使用 json2nix 来更新您的家庭管理器配置。

可用设置的完整最新列表可以在[此处](https://raw.githubusercontent.com/AvengeMedia/DankMaterialShell/refs/heads/master/quickshell/Common/settings/SettingsSpec.js)找到，同样，对于会话设置，可以在[此处](https://github.com/AvengeMedia/DankMaterialShell/raw/refs/heads/master/quickshell/Common/settings/SessionSpec.js)找到最新列表。


### 插件 {#plugins}

以声明方式安装 DankMaterialShell 插件。有两种方法：

#### 方法 1：使用插件注册表（推荐） {#method-1-using-the-plugin-registry-recommended}

[dms-plugin-registry](https://github.com/AvengeMedia/dms-plugin-registry) flake 提供所有社区插件作为每日更新的包。这是使用 Nix 安装插件的最简单方法。

首先，将插件注册表添加为 flake 输入：

```nix
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
        
    dms = {
      url = "github:AvengeMedia/DankMaterialShell/stable";
      inputs.nixpkgs.follows = "nixpkgs";
    };
        
    dms-plugin-registry = {
      url = "github:AvengeMedia/dms-plugin-registry";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };
}
```

然后导入模块并启用插件：

```nix
{
  imports = [
    inputs.dms.homeModules.dank-material-shell
    inputs.dms-plugin-registry.nixosModules.default
  ];

  programs.dank-material-shell = {
    enable = true;

    plugins = {
      # Simply enable plugins by their ID (from the registry)
      dankBatteryAlerts.enable = true;
      dockerManager.enable = true;

      # Add plugin-specific settings
      mediaPlayer = {
        enable = true;

        # You can only define settings here if using the home-manager module
        settings = {
          preferredSource = "spotify";
        };
      };
    };
  };
}
```

插件 ID 可以在 [插件商店](https://danklinux.com/plugins) 中找到 - 它是安装 URL 的最后部分。例如，`dms://plugin/install/dankBatteryAlerts` 的 ID 为 `dankBatteryAlerts`。

#### 方法 2：从源手动安装 {#method-2-manual-installation-from-source}

如果您不想使用注册表片，可以通过提供源来手动安装插件：

```nix
programs.dank-material-shell = {
  enable = true;

  plugins = {
    DockerManager = {
      src = pkgs.fetchFromGitHub {
        owner = "LuckShiba";
        repo = "DmsDockerManager";
        rev = "v1.2.0";
        sha256 = "sha256-VoJCaygWnKpv0s0pqTOmzZnPM922qPDMHk4EPcgVnaU=";
      };
      settings = {
        someOption = "value";
      };
    };
    AnotherPlugin = {
      enable = true;
      src = pkgs.another-plugin;
    };
  };
};
```

#### 插件设置管理（仅限家庭管理器） {#plugin-settings-management-home-manager-only}

您可以通过 `managePluginSettings` 选项选择是否使用 home-manager 管理插件设置。

```nix
programs.dank-material-shell = {
  enable = true;

  # Auto-enabled when plugins have settings configured
  managePluginSettings = true;

  plugins = {
    somePlugin = {
      enable = true;
      settings = {
        # Your plugin settings here
      };
    };
  };
};
```

- 如果除了 `managePluginSettings = true` 之外没有定义设置的插件，则会创建启用插件的最小 `plugin_settings.json`。
- 如果定义了插件设置，则 `managePluginSettings` 默认为 `true`，并且这些设置放置在 `plugin_settings.json` 中。
- 如果定义了插件设置并将`managePluginSettings`设置为`false`，则会出现警告，但不会创建`plugin_settings.json`。



## 高级配置 {#advanced-configuration}

有关可用选项的完整列表，请检查 DankMaterialShell 存储库中的模块文件：
- **NixOS 模块**：`distro/nix/nixos.nix`
- **家庭管理模块**：`distro/nix/home.nix`
- **niri 模块**：`distro/nix/niri.nix`
- **常用选项**：`distro/nix/options.nix`

## 重建 {#rebuilding}

进行配置更改后，重建系统：

```bash
# For home-manager standalone
home-manager switch

# For NixOS with home-manager as a module
sudo nixos-rebuild switch
```

## 故障排除 {#troubleshooting}

### DMS 不会自动启动 {#dms-doesnt-start-automatically}

确保您有：
- `systemd.enable = true` 用于基于 systemd 的启动，或
- `niri.enableSpawn = true` 用于 niri 管理的启动

### 缺少依赖项 {#missing-dependencies}

每个功能都有自己的依赖项集。如果某功能不起作用，请确保相应的 `enable` 选项设置为 `true`。例如，系统监控需要安装 `dgop` 的 `enableSystemMonitoring = true`。

### 自定义键绑定与 niri 默认值冲突 {#custom-keybindings-conflict-with-niri-defaults}

如果 `niri.enableKeybinds = true` 与您现有的 niri 配置冲突，您可以禁用它并使用 [按键绑定和 IPC](keybinds-ipc) 指南中的示例手动配置按键绑定。

## 后续步骤 {#next-steps}

- 通过[主题](application-themes)配置您的偏好
- 在[Keybinds & IPC](keybinds-ipc)中设置合成器键绑定
- 使用[插件]扩展功能(plugins-overview)
